#ifndef MOONTREE_FIR_PLAYER_H_
#define MOONTREE_FIR_PLAYER_H_

namespace moontree{

namespace fir{

   class Player{
      
   };


} //namespace fir

} //namespace moontree

#endif //MOONTREE_FIR_PLAYER_H_